# haskell-book

./: .ghci  .gitignore  Main.prof  README.md  haskell-book.cabal  profilingTime.prof
sandbox/: 01.hs
src/17/: 08-ExerciseVariationsOnEither.hs  09-ChapterExercises-1.hs  09-ChapterExercises-2.hs  09-Combinations.hs
src/18/: 02-WriteBind.hs  03-DoSyntaxAndMonads.hs  03-WhenFmapAloneIsntEnough.hs  04-EitherMonad.hs  04-ExampleOfTheListMonadInUse.hs  04-ShortExerciseEitherMonad.hs  04-UsingTheMaybeMonad.hs  05-BadMonad.hs  06-KleisliComposition.hs  07-ChapterExercises-1.hs  07-ChapterExercises-2.hs
src/19/: 02-TemplatingContentInScotty.hs  03-LiftingOverIO-1.hs  03-LiftingOverIO-2.hs
src/19/shawty/: shawty.cabal
src/19/shawty/app/: Main.hs
src/20/: 04-Maybe.hs  05-ExercisesLibraryFunctions.hs  06-ChapterExercises.hs
src/21/: 06-MorseCodeRevisited.hs  07-AxingTediousCode.hs  08-HttpStuff.hs  09-Either.hs
src/21/12-ChapterExercises/: Big.hs  Bigger.hs  Constant.hs  List.hs  Maybe.hs  Pair.hs  S.hs  Three.hs  Tree.hs
src/22/: 02-ANewBeginning.hs  02-ShortExercise.hs  02-ShortExerciseB.hs  05-Ask.hs  06-DemonstratingTheFunctionApplicative.hs  06-ReadingComprehension.hs  07-ExerciseReaderMonad.hs  07-TheMonadOfFunction.hs  08-PrettyReader.hs  11-ReaderPractice.hs  11-RewritingShawty.hs
src/23/: 04-TheStateNewtype.hs  05-ExercisesRollYourOwn.hs  05-RandomExample.hs  05-RandomExample2.hs  06-WriteStateForYourself.hs  07-FizzBuzzDifferently.hs  07-FizzBuzzState.hs  07-FizzBuzzTypical.hs  08-ChapterExercises.hs
src/24/: 03-ExercisesParsingPractice.hs  03-LearnParsers.hs  04-ExerciseUnitOfSuccess.hs  04-TextFractions.hs  06-AltParsing-2.hs  06-AltParsing.hs  06-ExerciseTryTry.hs  06-Quasimodo.hs  07-DataIni.hs  09-BT.hs  09-TextFractions.hs  10-Marshalling.hs  10-NumberOrString.hs  11-ChapterExercises-01.hs  11-ChapterExercises-02.hs  11-ChapterExercises-03.hs  11-ChapterExercises-04.hs  11-ChapterExercises-05.hs  11-ChapterExercises-06.hs  11-ChapterExercises-07.hs  11-ChapterExercises-08.hs  11-ChapterExercises-09.hs  11-ChapterExercises-10.hs
src/25/: 02-CommonFunctionsAsTypes.hs  04-GOTCHAExerciseTime.hs  05-Twonad.hs  06-AndNowForSomethingCompletelyDifferent.hs  06-ExercisesComposeInstances.hs  08-IdentityT.hs  README.md
src/25b/: 02-IdentityIsBoring.hs  02-IdentityIsBoring.hs~  README.md  README.md~
src/26/: 02-MaybeT.hs  03-EitherT.hs  04-ReaderT.hs  05-StateT.hs  08-OuterInner.hs  08-Scotty.hs  09-ExercisesLiftMore.hs  10-ExercisesSomeInstances.hs  MaybeT.hs  README.md  ReaderT.hs
src/26/10/: Main.hs
src/26/11/: Main.hs
src/26/11p1611/: Main.hs
src/26b/: .14-ChapterExercises.hs.swo  02-MaybeT.hs  03-EitherT.hs  04-ReaderT.hs  05-StateT.hs  08-Exercise-WrapItUp.hs  09-MonadTrans.hs  09-Scotty.hs  14-ChapterExercises.hs  14-FixTheCode.hs  14-HitCounter.hs  14-Morra.hs  README.md
src/26b/StateTUse/: Example.hs  ExampleGlobal.hs  Main.hs
src/27/: 11-ManualBang.hs  13-StrictTest1.hs  13-StrictTest2.hs  13-StrictTest3.hs  13-StrictTest4.hs  14-StrictList.hs
src/28/: README.md
src/28/10-ChapterExercises/: DList.hs  Queue.hs
src/28/2/: Main.hs  Main2.hs
src/28/5-Map/: Main.hs
src/28/6-Set/: Main.hs
src/28/7-Sequence/: Main.hs
src/28/8-Vector/: Main.hs  Main2.hs  Main3.hs  Main4.hs
src/28/9-StringTypes/: Char8.hs  Main.hs
src/29/: DebugBlahWoot.hs  NestedIO.hs  README.md  WhatHappens.hs
src/29/9/: NewVigenere.hs  NewVigenereIO.hs  OldVigenere.hs
src/30/: AnyType.hs  OurExceptions.hs  StoppingTheParty.hs  TryExcept.hs  WhySomeException.hs  WritePls.hs
src/30/AsynchronousExceptions/: Main.hs
src/30/TryExcept/: Main.hs
src/31/fingerd/: finger.db  fingerd.cabal
src/31/fingerd/src/: AddUser.hs  Debug.hs  Fingerd.hs  Main.hs
src/Ch05/: README.md
src/Ch05/Sec08/: GivenAType.hs  TypeKwonDo.hs
src/Ch06/: README.md
src/Ch06/Sec05/: EqInstances.hs
src/Ch06/Sec14/: TypeKwonDoTwo.hs
src/Ch07/: README.md
src/Ch07/Sec05/: CasePractice.hs
src/Ch07/Sec06/: ArtfulDodgy.hs
src/Ch07/Sec11/: LetsWriteCode.hs
src/Ch08/Sec05/: IntegralDivisionFromScratch.hs
src/Ch08/Sec06/: WordNumber.hs
src/Ch09/: README.md
src/Ch09/Sec05/: EnumFromTo.hs
src/Ch09/Sec06/: ThyFearfulSymmetry.hs
src/Ch09/Sec07/: SquareCube.hs
