name:                haskell-book
version:             0.1.0.0
synopsis:            Exercises from Haskell Programming from First Principles
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Peter Murphy
maintainer:          peterfrancismurphy@gmail.com
copyright:           2018 Peter Murphy
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall,
                       -Wno-type-defaults
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , aeson
                     , array
                     , attoparsec
                     , bytestring
                     , cassava
                     , checkers
                     , containers
                     , criterion
                     , directory
                     , dlist
                     , ghcid
                     , hedis
                     , hindent
                     , hspec
                     , http-client
                     , http-conduit
                     , lens
                     , mtl
                     , parsec
                     , parsers
                     , random
                     , raw-strings-qq
                     , scientific
                     , scotty
                     , text
                     , time
                     , transformers
                     , trifecta
                     , unordered-containers
                     , utf8-string
                     , uuid
                     , validation
                     , vector
                     , wreq
                     , yesod
